made new methods to increase and decrease counter. Added new translation

--- a/iosPrototype/de-CH.lproj/Main.strings
+++ b/iosPrototype/de-CH.lproj/Main.strings
@@ -38,3 +38,9 @@
 /* Class = "UILabel"; text = "fillCreationDate in here"; ObjectID = "wx1-Xz-vmA"; */
 "wx1-Xz-vmA.text" = "fillCreationDate in here";
 
+
+"kVl-5S-OXh.placeholder" = "Sueche";
+
+
+"kVl-5S-OXh.placeholder" = "Search";
+
